--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,8 @@ jobs:
       run: make build
 
     - name: Test
-      run: make test
+      run: |
+          go install github.com/onsi/ginkgo/v2/ginkgo@v2.3.1 && make test
 
     - name: Lint
       uses: golangci/golangci-lint-action@v3
