--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,14 +18,14 @@ jobs:
       with:
         go-version: 1.20.4
 
-    - name: Build
-      run: make build
+    - name: Lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: v1.52.2
 
     - name: Test
       run: |
           go install github.com/onsi/ginkgo/v2/ginkgo@v2.3.1 && make test
 
-    - name: Lint
-      uses: golangci/golangci-lint-action@v3
-      with:
-        version: v1.52.2
+    - name: Integration Test
+      run:  make integration
