--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - bases/gateway.bk.tencent.com_bkgatewayresources.yaml
 - bases/gateway.bk.tencent.com_bkgatewayconfigs.yaml
 - bases/gateway.bk.tencent.com_bkgatewayinstances.yaml
+- bases/gateway.bk.tencent.com_bkgatewaystreamresources.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -17,6 +18,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_bkgatewayresources.yaml
 #- patches/webhook_in_bkgatewayconfigs.yaml
 #- patches/webhook_in_bkgatewayinstances.yaml
+#- patches/webhook_in_bkgatewaystreamresources.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -26,6 +28,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_bkgatewayresources.yaml
 #- patches/cainjection_in_bkgatewayconfigs.yaml
 #- patches/cainjection_in_bkgatewayinstances.yaml
+#- patches/cainjection_in_bkgatewaystreamresources.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
