--- a/config/crd/bases/gateway.bk.tencent.com_bkgatewayservices.yaml
+++ b/config/crd/bases/gateway.bk.tencent.com_bkgatewayservices.yaml
@@ -3,7 +3,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
+    controller-gen.kubebuilder.io/version: v0.9.2
+  creationTimestamp: null
   name: bkgatewayservices.gateway.bk.tencent.com
 spec:
   group: gateway.bk.tencent.com
@@ -20,19 +21,14 @@ spec:
         description: BkGatewayService is the Schema for the bkgatewayservices API
         properties:
           apiVersion:
-            description: |-
-              APIVersion defines the versioned schema of this representation of an object.
-              Servers should convert recognized schemas to the latest internal value, and
-              may reject unrecognized values.
-              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: |-
-              Kind is a string value representing the REST resource this object represents.
-              Servers may infer this from the endpoint the client submits requests to.
-              Cannot be updated.
-              In CamelCase.
-              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
@@ -44,9 +40,8 @@ spec:
               enableWebsocket:
                 type: boolean
               id:
-                description: |-
-                  INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
+                description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                  Important: Run "make" to regenerate code after modifying this file'
                 nullable: true
                 type: string
               name:
@@ -81,10 +76,10 @@ spec:
                 description: BkGatewayUpstreamConfig upstream config for bk gateway
                 properties:
                   checks:
-                    description: |-
-                      UpstreamHealthCheck defines the active and/or passive health check for an Upstream,
-                      with the upstream health check feature, pods can be kicked out or joined in quickly,
-                      if the feedback of Kubernetes liveness/readiness probe is long.
+                    description: UpstreamHealthCheck defines the active and/or passive
+                      health check for an Upstream, with the upstream health check
+                      feature, pods can be kicked out or joined in quickly, if the
+                      feedback of Kubernetes liveness/readiness probe is long.
                     nullable: true
                     properties:
                       active:
@@ -96,9 +91,9 @@ spec:
                             nullable: true
                             type: integer
                           healthy:
-                            description: |-
-                              UpstreamActiveHealthCheckHealthy defines the conditions to judge whether
-                              an upstream node is healthy with the active manner.
+                            description: UpstreamActiveHealthCheckHealthy defines
+                              the conditions to judge whether an upstream node is
+                              healthy with the active manner.
                             nullable: true
                             properties:
                               httpStatuses:
@@ -137,9 +132,9 @@ spec:
                           type:
                             type: string
                           unhealthy:
-                            description: |-
-                              UpstreamActiveHealthCheckUnhealthy defines the conditions to judge whether
-                              an upstream node is unhealthy with the active manager.
+                            description: UpstreamActiveHealthCheckUnhealthy defines
+                              the conditions to judge whether an upstream node is
+                              unhealthy with the active manager.
                             nullable: true
                             properties:
                               httpFailures:
@@ -167,9 +162,9 @@ spec:
                         nullable: true
                         properties:
                           healthy:
-                            description: |-
-                              UpstreamPassiveHealthCheckHealthy defines the conditions to judge whether
-                              an upstream node is healthy with the passive manner.
+                            description: UpstreamPassiveHealthCheckHealthy defines
+                              the conditions to judge whether an upstream node is
+                              healthy with the passive manner.
                             nullable: true
                             properties:
                               httpStatuses:
@@ -184,9 +179,9 @@ spec:
                           type:
                             type: string
                           unhealthy:
-                            description: |-
-                              UpstreamPassiveHealthCheckUnhealthy defines the conditions to judge whether
-                              an upstream node is unhealthy with the passive manager.
+                            description: UpstreamPassiveHealthCheckUnhealthy defines
+                              the conditions to judge whether an upstream node is
+                              unhealthy with the passive manager.
                             nullable: true
                             properties:
                               httpFailures:
