--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   etcd:
-    image: docker.io/bitnami/etcd:3.5
+    image: docker.io/bitnamilegacy/etcd:3.5
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
     ports:
