--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -89,6 +89,8 @@ formatters:
   enable:
     - gofmt
     - goimports
+    - golines
+    - gofumpt
   settings:
     gofmt:
       # Simplify code: gofmt with `-s` option.
@@ -98,11 +100,35 @@ formatters:
       # https://pkg.go.dev/cmd/gofmt
       # Default: []
       rewrite-rules:
+        - pattern: 'interface{}'
+          replacement: 'any'
         - pattern: 'a[b:len(a)]'
           replacement: 'a[b:]'
     goimports:
       local-prefixes:
         - github.com/TencentBlueKing/blueking-apigateway-operator
+    gofumpt:
+      # Module path which contains the source code being formatted.
+      # Default: ""
+      module-path: core
+      # Choose whether to use the extra rules.
+      # Default: false
+      extra-rules: true
+    golines:
+      # Target maximum line length.
+      # Default: 100
+      max-len: 120
+      # Length of a tabulation.
+      # Default: 4
+      tab-len: 8
+      # Shorten single-line comments.
+      # Default: false
+      shorten-comments: true
+      # Default: true
+      reformat-tags: false
+      # Split chained methods on the dots as opposed to the arguments.
+      # Default: true
+      chain-split-dots: false
   exclusions:
     generated: lax
     paths:
