--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -8,6 +8,11 @@ services:
     ports:
       - "2479:2379"
       - "2480:2380"
+    healthcheck:
+      test: ["CMD", "etcdctl", "endpoint", "health"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
   operator:
     image: bk-micro-gateway-operator:development
     environment:
@@ -18,5 +23,6 @@ services:
     ports:
       - "6004:6004"
     depends_on:
-      - etcd
+      etcd:
+        condition: service_healthy
 
